feat(env): Add environment files for OpenAI API gateway
Added two new environment files, `.env` and `.env-azure`, to store sensitive and configurable settings for the OpenAI API gateway. These files contain environment variables such as API keys, API hosts, rate limit, client max body size, CORS settings, and content length.

This commit also updates the Docker Compose files, `docker-compose.yaml` and `docker-compose-azure.yaml`, to use the environment files instead of defining environment variables directly. The NGINX Dockerfile is modified to use the new NGINX configuration file template, `gateway-nginx.conf.template`, which gets replaced with environment variables during initialization.

This enhances the flexibility and security of the OpenAI API gateway by separating sensitive information into environment files and making it easier to manage and configure the gateway.

No code change detected.

--- a/docker-compose-azure.yaml
+++ b/docker-compose-azure.yaml
@@ -6,17 +6,6 @@ services:
     container_name: azure-openai-api-gateway
     ports:
       - 8081:80
-    environment:
-      - GATEWAY_API_KEY=super_secret_api_key                              # Required
-      - OPENAI_API_KEY=your_api_key_here                                  # Required
-      - OPENAI_API_HOST=https://my-azure-openai-api.openai.azure.com      # Required
-      - RATE_LIMIT=20r/m                                                  # Optional
-      - CLIENT_MAX_BODY_SIZE=25m                                          # Optional
-      - CORS_ORIGIN=*                                                     # Optional
-      - CORS_METHODS=*                                                    # Optional
-      - CORS_HEADERS=*                                                    # Optional
-      - CORS_CREDENTIALS=true                                             # Optional
-      - CORS_MAX_AGE=86400                                                # Optional
-      - CONTENT_LENGTH=0                                                  # Optional
-      - CONTENT_TYPE=text/plain charset=UTF-8                             # Optional
+    env_file:
+      - .env-azure
     restart: unless-stopped
