feat(gateway): Add Let's Encrypt support for SSL certificates
This commit adds Let's Encrypt support to the NGINX gateway setup. It installs Certbot and its Nginx plugin in the Dockerfile. The init.sh script now includes steps to request and apply a Let's Encrypt SSL certificate for the specified domain. The nginx configuration template is updated to include SSL-related directives and to redirect HTTP requests to HTTPS. This ensures secure communication with the OpenAI API through the gateway.

🔒✨🚀

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ CORS_CREDENTIALS=true
 CORS_MAX_AGE=86400
 CONTENT_LENGTH=0
 CONTENT_TYPE=text/plain charset=UTF-8
+DOMAIN=yourdomain.com
+EMAIL=youremail@example.com
