--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -12,7 +12,10 @@ ENV CORS_MAX_AGE="86400"
 ENV CONTENT_LENGTH="0"
 ENV CONTENT_TYPE="text/plain charset=UTF-8"
 
-# Copy gateway configuration
+# Install Certbot and its Nginx plugin
+RUN apt-get update && apt-get install -y certbot python3-certbot-nginx
+
+# Copy gateway configuration template
 COPY gateway-nginx.conf.template /etc/nginx/templates/gateway-nginx.conf.template
 
 # Copy and run init script to inject environment variables into configuration and run nginx
