--- a/.env-azure
+++ b/.env-azure
@@ -10,3 +10,5 @@ CORS_CREDENTIALS=true
 CORS_MAX_AGE=86400
 CONTENT_LENGTH=0
 CONTENT_TYPE=text/plain charset=UTF-8
+DOMAIN=yourazureddomain.com
+EMAIL=youremail@example.com
