--- a/image/gateway-nginx.conf.template
+++ b/image/gateway-nginx.conf.template
@@ -1,16 +1,27 @@
-# Define a shared memory zone "api" to store states of limiting requests. The maximum size for this zone is 10MB. RATE_LIMIT sets the rate of requests
-limit_req_zone $binary_remote_addr zone=api:10m rate=${RATE_LIMIT};
-
-# Set response body size (OpenAI API supports 25MB)
-client_max_body_size ${CLIENT_MAX_BODY_SIZE};
-
-# Start server configuration
 server {
-
-    # Configure Nginx to listen on port 80
     listen 80;
+    server_name ${DOMAIN};
 
-    # "location /" defines how to respond to requests for URLs beginning with /
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name ${DOMAIN};
+
+    ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+
+    # Other existing configurations
+    limit_req_zone $binary_remote_addr zone=api:10m rate=${RATE_LIMIT};
+    client_max_body_size ${CLIENT_MAX_BODY_SIZE};
+
     location / {
 
         # Pre-flight requests (OPTIONS)
