--- a/image/gateway-nginx.conf.template
+++ b/image/gateway-nginx.conf.template
@@ -1,15 +1,17 @@
 
 # Define a shared memory zone "api" to store states of limiting requests. The maximum size for this zone is 10MB. RATE_LIMIT sets the rate of requests
-limit_req_zone $binary_remote_addr zone=api:10m rate=${RATE_LIMIT};
+#limit_req_zone $binary_remote_addr zone=api:10m rate=${RATE_LIMIT};
 
 # Set response body size (OpenAI API supports 25MB)
-client_max_body_size ${CLIENT_MAX_BODY_SIZE};
+#client_max_body_size ${CLIENT_MAX_BODY_SIZE};
 
 # Start server configuration
 server {
 
     # Configure Nginx to listen on port 80
     listen 80;
+    
+    server_name ${DOMAIN};
 
     # "location /" defines how to respond to requests for URLs beginning with / 
     location / {
@@ -45,9 +47,9 @@ server {
         proxy_ssl_server_name on;
 
         # Enable limiting of requests by defining its parameters with this directive
-        limit_req zone=api;
+        #limit_req zone=api;
 
         # Return client status 429 (Too Many Requests) when the rate of requests exceeds the defined limit
-        limit_req_status 429;
+        #limit_req_status 429;
     }
 }
